--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -57,7 +57,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 10px;
+  padding: 30px 10px;
 }
 
 .github {
@@ -90,6 +90,8 @@ body {
 }
 
 h1 {
+  margin-top: 0;
+  font-size: calc(2.3rem + 3vw);
   -webkit-user-select: none;
   font-weight: 500;
 }
@@ -157,6 +159,7 @@ h1 {
 }
 
 button {
+  -webkit-user-select: none;
   transform: scale(1);
   transition: all 0.2s ease-in-out;
 }
@@ -182,7 +185,7 @@ button:not(:disabled):active {
   justify-content: flex-start;
 }
 
-#serverSection {
+section {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -190,8 +193,12 @@ button:not(:disabled):active {
   justify-content: flex-start;
 }
 
-#serverSection input,
-#serverSection select {
+#botInfos .simple-btn {
+  margin-top: 10px;
+}
+
+input,
+select {
   width: 100%;
   padding: 10px 7px;
   border-radius: 5px;
@@ -208,10 +215,10 @@ button:not(:disabled):active {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 10px;
 }
 
-#divChatSender button {
+.simple-btn {
   width: 100%;
   padding: 10px 20px;
   cursor: pointer;
@@ -222,7 +229,7 @@ button:not(:disabled):active {
   background-color: #5865f2;
 }
 
-#divChatSender button:disabled {
+.simple-btn:disabled {
   opacity: 0.5;
   width: 100%;
   padding: 10px 20px;
@@ -230,4 +237,32 @@ button:not(:disabled):active {
   border: none;
   color: white;
   border-radius: 5px;
+}
+
+.creator{
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.creator{
+  margin-bottom: 0;
+}
+
+.creator a{
+  color: #5865f2;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.creator a:hover{
+  color: #5865f2;
+  text-decoration: underline;
+  transition: all 0.2s ease-in-out;
 }
