--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -87,6 +87,7 @@ body {
   z-index: 999;
   padding: 0px 10px;
   border-radius: 10px;
+  text-align: center;
 }
 
 h1 {
@@ -94,6 +95,7 @@ h1 {
   font-size: calc(2.3rem + 3vw);
   -webkit-user-select: none;
   font-weight: 500;
+  text-align: center;
 }
 
 .bot-infos {
@@ -239,7 +241,7 @@ select {
   border-radius: 5px;
 }
 
-.creator{
+.creator {
   margin: 0;
   padding: 0;
   margin-top: 20px;
@@ -251,17 +253,17 @@ select {
   justify-content: center;
 }
 
-.creator{
+.creator {
   margin-bottom: 0;
 }
 
-.creator a{
+.creator a {
   color: #5865f2;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
 }
 
-.creator a:hover{
+.creator a:hover {
   color: #5865f2;
   text-decoration: underline;
   transition: all 0.2s ease-in-out;
@@ -275,7 +277,7 @@ select {
   margin-bottom: 10px;
 }
 
-.dm-message{
+.dm-message {
   width: 100%;
   display: flex;
   flex-direction: column;
